[tool.poetry]
name = "python-poetry-template"
version = "0.1.0"
description = ""
authors = ["Avery Crespi <averycrespi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
mypy = "^0.910"
bandit = "^1.7.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
